# logo-scrape

./: Makefile  README.md  logo.py  pyproject.toml  requirements.txt
logo_scrape/: logo_scrape.py
src/: logo-scraper.py
