[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["logo_scrape"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "logo-scrape"
description="A simple company logo scraper."
dynamic = ["version"]
authors = [
    {name = "Michal Mládek"},
    {email = "michal.mladek.78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["cli", "tool", "internet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow",
    "colorama",
    "playwright",
    "InquirerPy",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "rich",
    "ipython",
    "notebook",
    "setuptools",
    "setuptools_scm",
    "build",
    "validate-pyproject",
    "twine",
    "pre-commit",
    "black",
    "autoflake",
    "flake8",
    "isort",
    "mypy",
    "types-colorama",
]

[project.urls]
homepage = "https://github.com/michalnik/logo-scrape"
repository = "https://github.com/michalnik/logo-scrape"


[project.scripts]
logo-scrape = "logo_scrape:main"
